@startuml
skinparam classAttributeIconSize 0

class User {
  +id: int
  +name: string
  +email: string
  +password: string
}

class Symptom {
  +id: int
  +user_id: int
  +name: string
  +severity: string
  +description: text
  +date_recorded: date
  +notes: text
}

class Doctor {
  +id: int
  +name: string
  +specialty: string
  +city: string
  +years_of_experience: int
  +consultation_price: decimal
  +available_days: json
}

class Appointment {
  +id: int
  +user_id: int
  +doctor_id: int
  +appointment_date: datetime
  +status: string
  +notes: text
}

class AiAdvice {
  +id: int
  +user_id: int
  +advice: longtext
  +symptoms_snapshot: json
  +generated_at: datetime
}

User "1" -- "0..*" Symptom
User "1" -- "0..*" Appointment
Doctor "1" -- "0..*" Appointment
User "1" -- "0..*" AiAdvice
@enduml
